[package]
name = "densevec"
authors = ["arturo castro <arturo@openframeworks.cc>"]
description = "Map like collection with usize indices that stores values contiguosly"
homepage = "https://github.com/arturoc/densevec-rs"
repository = "https://github.com/arturoc/densevec-rs"
documentation = "http://rin.rs/docs/densevec/"
readme = "README.md"
license = "MIT"
version = "0.4.0"

[dependencies]
rayon = {version = "1", optional = true}
serde = {version = "1", optional = true}
serde_derive = {version = "1", optional = true}

[features]
unstable=[]
serialize=["serde", "serde_derive"]